# dl-remuxed

./: .gitignore  .pre-commit-config-full.yaml  .pre-commit-config.yaml  CODEENGINE_REFACTORING_SUMMARY.md  CONTRIBUTING.md  COPILOT_PATCH_TO_TASK.md  DEV-SETUP.md  HISTORY_FLATTENED.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  INSTRUCTION_VALIDATION_REPORT.md  MIGRATION_SUMMARY.md  MILESTONE_30_UPDATE.md  PATCH_TO_REFACTOR_INSTRUCTIONS.md  PUBLISHING.md  QUICK_REFERENCE.md  README.md  REFACTORING_INSTRUCTIONS.md  SCHEMA_VALIDATION_SUMMARY.md  STREAM_CONFIG_REDESIGN.md  SUMMARY.md  TASK_COMPLETION_SUMMARY.md  TO_DICT_USAGE.md  VALIDATION_ACCOUNT_DEFAULT.md  VALIDATION_REPORT_DomoPage_Access.md  VALIDATION_SUMMARY.md  VALIDATION_SUMMARY_Account_OAuth.md  account_config.txt  activate-env.ps1  activate.ps1  dataset_streams.txt  demonstrate_factory_pattern.py  dev-env.bat  develop_accounts.py  develop_feature.py  env_sample  log3.json  patch-to-refactoring-guide.md  pre-commit-fix.md  precommit_errors.json  (+19 more)
.github/: VERSIONING.md  versioning.instructions.md
.github/ISSUE_TEMPLATE/: class-validation.md
.github/instructions/: classes.instructions.md  error-design.instructions.md  general.instructions.md  routes.instructions.md  routes.md  tests.instructions.md  tests.md
.github/prompts/: architecture-review.prompt.md  code-review.prompt.md  create-prompt.prompt.md  document.prompt.md  optimize-performance.prompt.md  pragmatic-code-review.prompt.md  refactor.prompt.md
.github/workflows/: pre-commit-config.yml  pre-commit.yml  python-publish.yml  semver-autotag.yml
LOGGER/: scratchpad.txt  test_get_data.json
LOGGER/routes/: test_access_tokens.json
code_review/: base.md  route-context-implementation-plan.md
docs/: CLASS-VALIDATION-START-HERE.md  CLASS-VALIDATION-SUMMARY.md  COPILOT-AGENT-GUIDE.md  COPILOT_INSTRUCTIONS.md  DomoStream_Account_Composition.md  FINAL_SUMMARY.md  INTEGRATION_COMPLETE.md  PDP-Entity-Redesign.md  PUBLISHING.md  README.md  WORK_SUMMARY.md  account-add-share-return-type.md  available-config-keys.md  card-datasets-manager.md  circular-import-explanation.md  circular-import-resolution-summary.md  class-validation-guide.md  class-validation-quick-reference.md  class-validation-system-overview.md  codeengine-refactoring-summary.md  colored-logger-complete.md  colored-logger-example.md  colored-logger-migration.md  colored-logger-quick-reference.md  compliance-verification-instance-switcher.md  dataflow-trigger-integration.md  dynamic-property-registration.md  error-design-strategy.md  jupyter-ignore-folders-guide.md  jupyter-log-levels.md  log-level-quick-ref.md  pre-commit-troubleshooting.md  repr-is-repr-flag.md  route-analysis-and-recommendations.md  route-context-pattern.md  route-refactoring-dashboard.md  route-refactoring-guide.md  route-refactoring-progress.md  route-repair-implementation-plan.md  route-repair-strategy.md  (+13 more)
docs/copilot-kit/: README.md  custom-prompts-guide.md  fork-sync-guide.md  testing-guide.md
docs/design-patterns/: register-pattern.md
docs/validation/: ACCOUNT_CLASS_VALIDATION.md  ACCOUNT_VALIDATION_SUMMARY.md
domolibrary/: __init__.py  _modidx.py
domolibrary/classes/: CodeEngineManifest.py  CodeEngineManifest_Argument.py  CodeEngineManifest_Function.py  DomoAccess.py  DomoAccessToken.py  DomoAccount.py  DomoAccount_Config.py  DomoAccount_Credential.py  DomoAccount_Default.py  DomoAccount_OAuth.py  DomoAppDb.py  DomoAppStudio.py  DomoApplication.py  DomoApplication_Job_Base.py  DomoApplication_Job_RemoteDomoStats.py  DomoApplication_Job_Watchdog.py  DomoBootstrap.py  DomoCard.py  DomoCertification.py  DomoCodeEngine.py  DomoDatacenter.py  DomoDataflow.py  DomoDataset.py  (+29 more)
examples/: conformed_properties_complete_demo.py  custom_repr_with_properties.py  dynamic_property_registration_example.py  fix_stream.py  property_registration_comparison.py  stream_conformed_properties_example.py  unified_access_control_example.py
scripts/: README-COPILOT-SETUP.md  README.md  README_parse_errors.md  add_context_param.py  analyze-patch-to.py  batch_create_issues.ps1  build.ps1  capture-pr-comments.bat  capture-pr-comments.ps1  capture_pr_comments.py  check-patch-to-progress.py  check-route-syntax.py  check-type-hints-progress.py  check-type-hints.py  clean-nbdev-comments.ps1  clean-nbdev-enhanced.ps1  create-github-issues.py  create_migration_issues.ps1  fix-aliases.py  fix-enum-inheritance.py  fix-self-imports.ps1  fix_and_parse.bat  fix_and_parse_combined.py  fix_encoding.py  format-code.ps1  format-code.sh  generate-class-validation-issues.py  generate-context-migration-todos.py  generate-type-hints-guide.py  generate_migration_issues.py  implement-type-hints.ps1  lint.ps1  parse_errors.bat  parse_precommit_errors.py  publish.ps1  refactor-lazy-imports.py  refactor-patch-to.ps1  remove-nbdev-dependencies.py  replace_optional.py  requirements-pr-capture.txt  (+6 more)
src/: __init__.py
test_env/: pyvenv.cfg
tests/: conftest.py  download_default_image.py  precommit_errors.json  precommit_errors.md  precommit_errors.txt  pytest_examples.py  test_card_datasets.py  test_card_datasets_complete.py  test_card_datasets_unit.py  test_card_module.py  test_classes.py  test_dataclass_inheritance.py  test_dataflow_integration.py  test_examples.py  test_export_as_dict.py  test_federated_cards.py  test_harness.py  test_notebook_pattern.py  test_route_context.py  test_route_imports.py  test_routes.py  test_schedule_display.py  test_trigger_settings.py  test_type_hints_validation.py  validate_schedule_refactor.py
to_dos/: README.md  index.md
(+910 files in other folders)
