[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domolibrary"
version = "4.5.29"
description = "A Python library for interacting with Domo APIs"
authors = [
    { name = "Jae Wilson", email = "jaewilson07@gmail.com" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["nbdev", "jupyter", "notebook", "python", "domo", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "nbdev",
    "pandas",
    "aiohttp",
    "requests",
    "twine",
    "orjson",
    "httpx",
    "python-dotenv",
    "sqlparse",
    "sqlglot",
    "bs4",
    "nbqa",
    "black",
    "aenum",
    "pillow",
    "xkcdpass",
    "sql_metadata",
    "beautifulsoup4",
]

[project.optional-dependencies]
dev = [
    "pylint",
    "pytest",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/jaewilson07/domo_library"
Repository = "https://github.com/jaewilson07/domo_library"
Documentation = "https://jaewilson07.github.io/domo_library"

[tool.uv]
dev-dependencies = [
    "pylint",
    "pytest", 
    "pre-commit",
]

[tool.hatch.build.targets.wheel]
packages = ["domolibrary"]
