[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domolibrary2"
version = "0.0.1-alpha"
description = "A Python library for interacting with Domo APIs"
authors = [
    { name = "Jae Wilson", email = "jaewilson07@gmail.com" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["jupyter", "notebook", "python", "domo", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"]
dependencies = [
    "pandas",
    "aiohttp",
    "requests",
    "twine",
    "orjson",
    "httpx",
    "python-dotenv",
    "sqlparse",
    "sqlglot",
    "bs4",
    "nbqa",
    "black",
    "aenum",
    "pillow",
    "xkcdpass",
    "sql_metadata",
    "beautifulsoup4"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit"]

[dependency-groups]
dev = [
    "pylint",
    "ruff", 
    "black",
    "isort",
    "mypy",
    "pytest",
    "pytest-cov",
    "pre-commit"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "domolibrary2.*"
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = "domolibrary2"
